--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ arabic-reshaper==3.0.0
 asgiref==3.8.1
 asn1crypto==1.5.1
 async-timeout==4.0.3
+attrs==24.2.0
+beautifulsoup4==4.12.3
 billiard==4.2.1
 black==24.10.0
 Brotli==1.1.0
@@ -53,6 +55,7 @@ lxml==5.3.0
 mypy-extensions==1.0.0
 numpy==2.1.2
 oscrypto==1.3.0
+outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.3
 pathspec==0.12.1
@@ -68,6 +71,7 @@ pyhanko-certvalidator==0.26.3
 PyJWT==2.9.0
 pypdf==5.0.1
 pyphen==0.16.0
+PySocks==1.7.1
 python-bidi==0.6.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
@@ -78,13 +82,18 @@ qrcode==8.0
 redis==5.1.1
 reportlab==4.2.5
 requests==2.32.3
+selenium==4.25.0
 six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
 sqlparse==0.5.1
 svglib==1.5.1
 text-unidecode==1.3
 tinycss2==1.3.0
 tomli==2.0.2
+trio==0.27.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
@@ -96,6 +105,8 @@ vine==5.1.0
 watchfiles==0.24.0
 wcwidth==0.2.13
 webencodings==0.5.1
+websocket-client==1.8.0
 websockets==13.1
+wsproto==1.2.0
 xhtml2pdf==0.2.16
 zopfli==0.2.3
